--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/bcryptjs": "2.4.2",
     "@types/express": "4.17.17",
     "@types/facebook-js-sdk": "3.3.6",
+    "@types/fb": "^0.0.28",
     "@types/jest": "29.5.2",
     "@types/ms": "^0.7.31",
     "@types/multer": "1.4.7",
