--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -1,10 +1,10 @@
 # Your workflow name.
 name: Deploy to heroku.
 
-# Run workflow on every push to master branch.
+# Run workflow on every push / pull request to the main branch.
 on:
   push:
-    branches: [master]
+    branches: [ main ]
   pull_request:
       branches: [ main ]
 
