--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       # Check-out your repository.
       - name: Checkout
