--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
+    "@nestjs/schedule": "^3.0.3",
     "@nestjs/swagger": "7.1.1",
     "@nestjs/typeorm": "10.0.0",
     "@types/multer-s3": "^3.0.0",
@@ -44,6 +45,7 @@
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "date-fns": "^2.30.0",
     "fb": "2.0.0",
     "google-auth-library": "8.9.0",
     "handlebars": "4.7.7",
