--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
+    "@nestjs/schedule": "^3.0.4",
     "@nestjs/swagger": "7.1.1",
     "@nestjs/typeorm": "10.0.0",
     "@types/multer-s3": "^3.0.0",
