origin/update:92-add-websocket(added feed.gateway)

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
+    "@nestjs/platform-socket.io": "^10.2.6",
     "@nestjs/schedule": "^3.0.3",
     "@nestjs/swagger": "7.1.1",
     "@nestjs/typeorm": "10.0.0",
@@ -62,6 +63,7 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
     "rxjs": "7.8.1",
+    "socket.io": "^4.7.2",
     "source-map-support": "0.5.21",
     "swagger-ui-express": "5.0.0",
     "twitter": "1.7.1",
