origin/feature:92-create-endpoinr-for-getting-user-feed(added to the socket structure)

--- a/package.json
+++ b/package.json
@@ -37,15 +37,17 @@
     "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
-    "@nestjs/platform-socket.io": "^10.2.6",
+    "@nestjs/platform-socket.io": "^10.2.7",
     "@nestjs/schedule": "^3.0.3",
     "@nestjs/swagger": "7.1.1",
     "@nestjs/typeorm": "10.0.0",
+    "@nestjs/websockets": "^10.2.7",
     "@types/multer-s3": "^3.0.0",
     "apple-signin-auth": "1.7.5",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "fb": "2.0.0",
     "google-auth-library": "8.9.0",
@@ -64,6 +66,7 @@
     "rimraf": "5.0.1",
     "rxjs": "7.8.1",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "source-map-support": "0.5.21",
     "swagger-ui-express": "5.0.0",
     "twitter": "1.7.1",
@@ -84,6 +87,7 @@
     "@types/node": "18.16.19",
     "@types/passport-anonymous": "1.0.3",
     "@types/passport-jwt": "3.0.9",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "2.0.12",
     "@types/twitter": "1.7.1",
     "@typescript-eslint/eslint-plugin": "6.0.0",
