--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
+    "@nestjs/platform-socket.io": "^10.2.7",
     "@nestjs/schedule": "^3.0.4",
     "@nestjs/swagger": "7.1.1",
     "@nestjs/typeorm": "10.0.0",
+    "@nestjs/websockets": "^10.2.7",
     "@types/multer-s3": "^3.0.0",
     "apple-signin-auth": "1.7.5",
     "bcryptjs": "2.4.3",
@@ -83,6 +85,7 @@
     "@types/node": "18.16.19",
     "@types/passport-anonymous": "1.0.3",
     "@types/passport-jwt": "3.0.9",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "2.0.12",
     "@types/twitter": "1.7.1",
     "@typescript-eslint/eslint-plugin": "6.0.0",
