revert aws_region to eu-central-1

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  AWS_REGION: us-west-2
+  AWS_REGION: eu-central-1
   ECR_NAME: chapter-dev-api
   IMAGE_MAJOR_VERSION: 1
 
