--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,10 +32,12 @@ jobs:
         id: build-and-push
         run: |
           #define-image-version
-          next_image_version="$((${{ env.IMAGE_MINOR_VERSION }} + 1))"
-          image_version="${{ env.IMAGE_MAJOR_VERSION }}.$next_image_version"
+          image_version="${{ env.IMAGE_MAJOR_VERSION }}.${{ env.IMAGE_MINOR_VERSION }}"
           echo "IMAGE VERSION: $image_version"
+
+          next_image_version="$(($image_version + 1))"
           echo "NEXT IMAGE VERSION: $next_image_version"
+
           echo "next-image-version=$next_image_version" >> "$GITHUB_OUTPUT"
 
           aws_repo="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com"
