--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,10 +35,10 @@ jobs:
           image_version="${{ env.IMAGE_MAJOR_VERSION }}.${{ vars.IMAGE_MINOR_VERSION }}"
           echo "IMAGE VERSION: $image_version"
 
-          next_image_version="$(($image_version + 1))"
-          echo "NEXT IMAGE VERSION: $next_image_version"
+          next_image_minor_version="$((${{ vars.IMAGE_MINOR_VERSION }} + 1))"
+          echo "NEXT IMAGE MINOR VERSION: $next_image_minor_version"
 
-          echo "next-image-version=$next_image_version" >> "$GITHUB_OUTPUT"
+          echo "next-image-minor-version=$next_image_minor_version" >> "$GITHUB_OUTPUT"
 
           aws_repo="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com"
           repository="$aws_repo/$ECR_NAME"
@@ -55,7 +55,7 @@ jobs:
         uses: action-pack/set-variable@v1
         with:
           name: IMAGE_MINOR_VERSION
-          value: ${{ steps.build-and-push.outputs.next-image-version }}
+          value: ${{ steps.build-and-push.outputs.next-image-minor-version }}
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
   deploy:
